<resources>
    <string name="app_name">My Cart</string>
    <string name="menu_icon_title">View Cart</string>
    <string name="search">Search</string>
    <string name="quantity">Quantity</string>
    <string name="sum">Sum price</string>
    <string name="total">Total</string>
    <string name="check_out">Check out</string>
    <string name="quartity">000</string>
    <string name="cost">00000</string>
</resources>